--- a/EECIP/packages.config
+++ b/EECIP/packages.config
@@ -26,11 +26,16 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="Select2.js" version="4.0.5" targetFramework="net461" />
-  <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
+  <package id="SendGrid" version="9.23.0" targetFramework="net461" />
+  <package id="starkbank-ecdsa" version="1.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="TinyMCE" version="4.7.13" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
